--- a/css/styles.css
+++ b/css/styles.css
@@ -268,6 +268,7 @@ header {
   margin: 0;
   padding: 0;
   flex-grow: 1;
+  position: relative;
 }
 .search-box label input {
   border: 1px solid #aea8a8;
@@ -278,6 +279,53 @@ header {
   background-color: #f6f6f6;
   color: #444444;
   font-size: 17px;
+}
+.search-box label .autocomplete-container {
+  display: block;
+  height: 0;
+  width: 100%;
+  max-height: 0;
+  visibility: hidden;
+  opacity: 0;
+  background-color: #FFFFFF;
+  border: 1px solid #aea8a8;
+  border-top: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: -1;
+}
+.search-box label input:focus + .autocomplete-container {
+  height: auto;
+  max-height: 300px;
+  visibility: visible;
+  overflow-y: auto;
+  opacity: 1;
+  z-index: 1;
+  transition: opacity .6s ease;
+}
+.autocomplete-container .autocomplete-item {
+  display: block;
+  position: relative;
+  border-bottom: 1px solid #EEEEEE;
+  color: #1f1a21;
+  text-align: center;
+  font-size: 16px;
+  padding: 18px 18px 12px;
+}
+.autocomplete-container .autocomplete-item:last-of-type {
+  border-bottom: none;
+}
+.autocomplete-container .autocomplete-item:hover {
+  cursor: pointer;
+  background-color: #f3f3f3;
+}
+.autocomplete-item .searched-category {
+  position: absolute;
+  top: 6px;
+  left: 8px;
+  font-size: 13px;
+  color: #aeadad;
 }
 .search-box button.search-button {
   background-color: #ff4136;
